Resolved duplicate prefix issue

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+sfg.brewery.apiHost=http://localhost:8080
+sfg.brewery.requestTimeOut = 3000
+sfg.brewery.socketTimeOut = 3000
+sfg.brewery.maxConnections =100
+sfg.brewery.maxConnectionsPerRoute = 20
